--- a/example/example.vcxproj.filters
+++ b/example/example.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\main.cpp">
+    <ClCompile Include="src\app.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
